force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/Dependent_Picklist_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Dependent Picklist Mapping</label>
    <pluralLabel>Dependent Picklist Mappings</pluralLabel>
    <description>One row per parent-value =&gt; child-value pairing used by the c-dependent-picklist-pair LWC. Records are grouped by Grouping__c so a single metadata type can drive many independent picklist pairs.</description>
</CustomObject>