force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
    <description>Only active rows are returned to the component. Lets you retire options without deleting history.</description>
</CustomField>