force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Child_Label__c.field-meta.xml
<CustomField>
    <fullName>Child_Label__c</fullName>
    <label>Child Label</label>
    <length>255</length>
    <type>Text</type>
    <description>Display label for the child option. Falls back to Child_Value__c when blank.</description>
</CustomField>