force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Child_Value__c.field-meta.xml
<CustomField>
    <fullName>Child_Value__c</fullName>
    <label>Child Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>Stored value of the child option (the value carried in events).</description>
</CustomField>