force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>Logical name of the picklist pair (e.g. Country_State). The LWC filters records by this value.</description>
</CustomField>