force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Parent_Label__c.field-meta.xml
<CustomField>
    <fullName>Parent_Label__c</fullName>
    <label>Parent Label</label>
    <length>255</length>
    <type>Text</type>
    <description>Display label for the parent option. Falls back to Parent_Value__c when blank.</description>
</CustomField>