force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Parent_Value__c.field-meta.xml
<CustomField>
    <fullName>Parent_Value__c</fullName>
    <label>Parent Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>Stored value of the parent option (the value carried in events).</description>
</CustomField>