force-app/main/default/objects/Dependent_Picklist_Mapping__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Optional ordering hint within a grouping. Lower numbers appear first.</description>
</CustomField>